Bring in and use Miha Nita's java-color-loggers.

--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -1,9 +1,15 @@
-# Off for now... ,java.util.logging.FileHandler
-handlers=java.util.logging.ConsoleHandler 
+# Handlers off for now... ,java.util.logging.FileHandler
+
+# handlers=java.util.logging.ConsoleHandler
 
 # While we're developing...
-java.util.logging.ConsoleHandler.level=FINEST
-java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
+# java.util.logging.ConsoleHandler.level=FINEST
+# java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
+
+handlers=com.mihnita.colorlog.jdk.AnsiColorConsoleHandler
+
+com.mihnita.colorlog.jdk.AnsiColorConsoleHandler.level=FINEST
+com.mihnita.colorlog.jdk.AnsiColorConsoleHandler.formatter=java.util.logging.SimpleFormatter
 
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.FileHandler.append=true
